# WeatherClockGTK

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.ps1  build.sh  main.c  package-deb.sh  run.ps1
